module(
    name = "atlas",
    version = "1.0.0",
)

bazel_dep(name = "rules_nodejs", version = "5.3.0")
bazel_dep(name = "rules_typescript", version = "5.3.0")

# Add the aspect_rules_ts module
bazel_dep(name = "aspect_rules_ts", version = "1.32.0", repo_name = "aspect_rules_ts")

# Add any other necessary dependencies here
