module(
    name = "atlas",
    version = "1.0.0",
)

# Foundation JS rules (verified in BCR)
bazel_dep(name = "aspect_rules_js", version = "2.3.1")

# TypeScript rules (version matches JS rules compatibility)
bazel_dep(name = "aspect_rules_ts", version = "2.3.1")

# Node.js toolchain (verified in BCR)
bazel_dep(name = "rules_nodejs", version = "5.8.2")

# Verified registry links:
# aspect_rules_js: https://bcr.bazel.build/packages/aspect_rules_js/2.3.1
# aspect_rules_ts: https://bcr.bazel.build/packages/aspect_rules_ts/2.3.1
# rules_nodejs: https://bcr.bazel.build/packages/rules_nodejs/5.8.2

# Module extension configuration
load("@aspect_rules_js//npm:extensions.bzl", "npm")

npm.npm_translate_lock(
    name = "npm",
    npm_lock = "//:package-lock.json",
    package_json = "//:package.json",
)

use_repo(npm, "npm")
