module(
    name = "atlas",
    version = "1.0.0",
)

bazel_dep(name = "rules_nodejs", version = "5.8.2", dev_dependency = True, repo_name = "rules_nodejs")
bazel_dep(name = "rules_typescript", version = "5.3.0")
bazel_dep(name = "aspect_rules_ts", version = "2.3.1", dev_dependency = True, repo_name = "aspect_rules_ts")
bazel_dep(name = "aspect_rules_js", version = "2.3.1", dev_dependency = True, repo_name = "aspect_rules_js")

git_override(
    module_name = "aspect_rules_js",
    commit = "a1b2c3d4e5f6...",  # Replace with actual commit hash
    remote = "https://github.com/aspect-build/rules_js",
)

git_override(
    module_name = "aspect_rules_ts",
    commit = "f6e5d4c3b2a1...",  # Replace with actual commit hash
    remote = "https://github.com/aspect-build/rules_ts",
)

git_override(
    module_name = "rules_nodejs",
    commit = "0987654321ab...",  # Replace with actual commit hash
    remote = "https://github.com/bazelbuild/rules_nodejs",
)

load("@aspect_rules_js//npm:extensions.bzl", "npm")

npm.npm_translate_lock(
    name = "npm",
    npm_lock = "//:package-lock.json",
    package_json = "//:package.json",
)

use_repo(npm, "npm")
